# hoodini

./: .dockerbuild  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  TESTING.md  TODO.md  docker-compose.yml  environment.yml  hoodini-docker  pixi.toml  pyproject.toml  requirements-dev.txt  test.py
.github/workflows/: ci.yml  docker-build.yml
blast_seed_test/: input_from_blast.txt
docs/: AI_AGENT_GUIDE.md  ARCHITECTURE.md  STYLE_GUIDE.md  _meta.json  cli-reference.md  index.md  input-formats.md  installation.md  outputs.md  tutorial.md
docs/api/: reference.mdx
example/: cas9.txt  hoodini_cli_workflow.ipynb  input.txt  ipg_debug_notebook.ipynb  ipg_debug_notebook.py  query.fa  uniprot_ids.txt
hoodini/: __main__.py  ani.py  arrange_data.py  basic_plot.py  binpicker.py  clean_data.py  cli.py  cluster_proteins.py  decenttree_runner.py  deep_jackhmmer.py  deep_mmseqs.py  extra_annotations.py  extra_plot.py  fetch_ipg_from_accessions.py  initial_checks.py  initialize.py  neighborhood_extractor.py  nt_links.py  nuc2asmlen.py  pairwise_nt.py  parse_assemblies.py  parse_ipg.py  prefetch_links.py  protein_links.py  run_proteome_similarity.py  taxonomy.py  utils.py  write_data.py
hoodini/config/: __init__.py  defaults.toml  schema.py
hoodini/data/: dive_combined.parquet
hoodini/download/: assembly_summary.py  contig_lengths.py  databases.py  metacerberus.py  type_dive.py
hoodini/extra_tools/: __init__.py  antidefense.py  blast.py  cctyper.py  defensefinder.py  domain.py  emapper.py  genomad.py  ncrna.py  padloc.py  phrogs.py
hoodini/models/: schemas.py
hoodini/utils/: classes.py  cli_helpers.py  combine_parquets.py  core.py  downloader.py  extract_neighborhood.py  logging_utils.py  ncbi_api.py  polars_adapters.py  tree_building.py
scripts/: compare_installs.py  generate_recipe.py
src/hoodini/: __init__.py  __main__.py  cli.py
src/hoodini/config/: __init__.py  defaults.toml  metacerberus.toml  schema.py  settings.py
src/hoodini/data/: all.cm  dive_combined.parquet
src/hoodini/download/: assembly_summary.py  contig_lengths.py  databases.py  idmapping.py  metacerberus.py  type_dive.py
src/hoodini/extra_tools/: blast.py  cctyper.py  decenttree_linux  decenttree_macos  defensefinder.py  domain.py  emapper.py  genomad.py  ncrna.py  padloc.py  trna.py
src/hoodini/models/: schemas.py
src/hoodini/pipeline/: __init__.py  cluster_proteins.py  initialize.py  pairwise_nt.py  parse_assemblies.py  parse_ipg.py  protein_links.py  proteome_similarity.py  runner.py  taxonomy.py  write_data.py
src/hoodini/pipeline/helpers/: decenttree_builder.py  fetch_ipg_from_accessions.py  jackhmmer_search.py  mmseqs_clustering.py  neighborhood_extractor.py  nuc2asmlen.py  nucleotide_links.py  prefetch_links.py  single_query.py
src/hoodini/template/: template.html
src/hoodini/utils/: browser_setup.py  classes.py  cli_helpers.py  collections.py  colors.py  combine_parquets.py  downloader.py  extract_neighborhood.py  id_parsing.py  logging_utils.py  memory_utils.py  merge_helpers.py  ncbi_api.py  playwright_utils.py  polars_adapters.py  runtime_env.py  seq_io.py  tree_building.py  validation.py
tests/: conftest.py  test_cli_smoke.py  test_initialize.py  test_polars_adapters.py
tests/feature_coverage/: run_pipeline_matrix.py
tests/feature_coverage/inputs/: blast_query.fasta  cas9.txt  foldmason_ids.txt  inputsheet.tsv
tests/integration/: test_runner.py
tests/unit/: test_cand_modes.py  test_config.py  test_helpers.py  test_windows.py
