[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoodini"
version = "1.0.0"
description = "magic gene-neighborhood analyses"
authors = [{name = "Mario R. Mestre", email = "mario.mestre@bio.ku.dk"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20.0",
    "biopython>=1.80",
    "rich>=13.0.0",
    "rich-click>=1.7.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "orfipy-core>=0.0.4",
    "pyrodigal>=3.0.0",
    "gb-io>=0.2.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
hoodini = "hoodini.__main__:main"
deep_mmseqs = "hoodini.pipeline.helpers.mmseqs_clustering:main"
deep_jackhmmer = "hoodini.pipeline.helpers.jackhmmer_search:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hoodini", "hoodini.*"]

[tool.setuptools.package-data]
hoodini = ["**"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
known_first_party = ["hoodini"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/hoodini/data", "hoodini.egg-info"]

[tool.ruff.lint]
select = [
	"E",   
	"F",   
	"I",   
	"UP",  
	"B",   
	"C4",  
	"SIM", 
	"N",   
	"S",   
	"PL",  
]
ignore = [
	"B905",  
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
	"ignore::DeprecationWarning",
]
