[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoodini"
version = "1.0.0"
description = "magic gene-neighborhood analyses"
authors = [{ name = "Mario R. Mestre", email = "mario.mestre@bio.ku.dk" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"polars>=0.20.0",
	"biopython>=1.80",
	"rich>=13.0.0",
	"rich-click>=1.7.0",
	"requests>=2.31.0",
	"scipy>=1.11.0",
	"numpy>=1.24.0",
	"pandas",
	"pyarrow",
	"networkx",
	"ete3",
	"orfipy>=0.0.4",
	"pyrodigal>=3.0.0",
	"gb-io>=0.2.0",
	"httpx",
	"aiohttp",
	"pyhmmer",
	"alphafetcher",
	"jinja2",
	"mappy",
	"playwright>=1.40.0",
	"nest_asyncio>=1.6.0",
	"cctyper @ git+https://github.com/pentamorfico/CRISPRCasTyper.git",
	"tomli>=2.0.0",
	"psutil>=5.9.0",
	"duckdb>=0.9.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.4.0",
	"pytest-cov>=4.1.0",
	"pytest-xdist>=3.5.0",
	"pytest-randomly>=3.15.0",
	"hypothesis>=6.100.0",
	"black==24.10.0",
	"ruff>=0.1.0",
	"isort>=5.12.0",
	"mypy>=1.5.0",
]

[project.scripts]
hoodini = "hoodini.__main__:main"
deep_mmseqs = "hoodini.pipeline.helpers.mmseqs_clustering:main"
deep_jackhmmer = "hoodini.pipeline.helpers.jackhmmer_search:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hoodini", "hoodini.*"]

[tool.setuptools.package-data]
hoodini = ["**"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
known_first_party = ["hoodini"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/hoodini/data", "hoodini.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "N", "S", "PL"]
ignore = [
	"B905",
	"E501",    # Line too long (handled by black)
	"E741",    # Ambiguous variable name
	"S608",    # SQL injection (false positive for DuckDB internal queries)
	"PLR0911", # Too many return statements
	"PLR0912", # Too many branches
	"PLR0913", # Too many arguments
	"PLR0915", # Too many statements
	"PLR2004", # Magic value comparison
	"PLW0603", # Global statement
	"PLW2901", # Redefined loop name
	"PLC0415", # Import outside top-level
	"S101",    # Use of assert
	"S110",    # Try-except-pass
	"S112",    # Try-except-continue
	"S113",    # Missing timeout
	"S202",    # Tarfile unsafe members
	"S314",    # XML element tree usage
	"S602",    # Shell equals true
	"S603",    # Untrusted input
	"S607",    # Partial executable path
	"S701",    # Jinja2 autoescape
	"N802",    # Invalid function name
	"N803",    # Invalid argument name
	"N806",    # Non-lowercase variable
	"B007",    # Unused loop control variable
	"B008",    # Function call in default argument
	"B023",    # Function uses loop variable
	"B904",    # Raise without from inside except
	"PLW1510", # Subprocess run without check
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring network",
    "unit: marks tests as fast unit tests",
    "requires_db: marks tests requiring external databases (PADLOC, DefenseFinder)",
]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.11.*"
blast = "*"
diamond = "!=2.1.19"
skani = "*"
fastani = "*"
padloc = ">=2.0"
defense-finder = ">=2.0.1"
genomad = "*"
mafft = "*"
foldseek = "*"
infernal = "*"
famsa = "*"
veryfasttree = "*"
mmseqs2 = "*"
entrez-direct = "*"
aria2 = "*"
pigz = "*"
ete3 = ">=3.1.3"
aria2p = "*"
alphafetcher = "*"
diamondonpy = "*"
playwright-python = ">=1.47,<1.48"
openssl = "*"
certifi = "*"
ca-certificates = "*"

[tool.pixi.target.linux-64.dependencies]
firefox = "*"
gtk3 = "*"
atk = "*"
xorg-libxcomposite = "*"
xorg-libxdamage = "*"
xorg-libxfixes = "*"
xorg-libxrandr = "*"
xorg-libxrender = "*"
xorg-libxext = "*"
cairo = "*"
pango = "*"
gdk-pixbuf = "*"
fontconfig = "*"
alsa-lib = "*"

[tool.pixi.pypi-dependencies]
hoodini = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
